--- a/index.html
+++ b/index.html
@@ -5,25 +5,26 @@
 		<link rel="icon" href="./favicon.png" />
 		<meta name="viewport" content="width=device-width" />
 		<meta http-equiv="content-security-policy" content="">
-		<link rel="modulepreload" href="./_app/immutable/entry/start.df058509.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/start.a32231b5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index.e8d42111.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.16780058.js">
-		<link rel="modulepreload" href="./_app/immutable/entry/app.ef894a2b.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.076ee777.js">
+		<link rel="modulepreload" href="./_app/immutable/entry/app.a260fdcb.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0.db545f18.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/2.4c74d2c5.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/2.b5595795.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
 
 
 <h1>Welcome to SvelteKit</h1>
+<p>hello world!</p>
 <p>Visit <a href="https://kit.svelte.dev">kit.svelte.dev</a> to read the documentation</p>
 
 
 			
 			<script>
 				{
-					__sveltekit_vrzy0s = {
+					__sveltekit_6aho39 = {
 						base: new URL(".", location).pathname.slice(0, -1),
 						env: {}
 					};
@@ -33,8 +34,8 @@
 					const data = [null,null];
 
 					Promise.all([
-						import("./_app/immutable/entry/start.df058509.js"),
-						import("./_app/immutable/entry/app.ef894a2b.js")
+						import("./_app/immutable/entry/start.a32231b5.js"),
+						import("./_app/immutable/entry/app.a260fdcb.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
 							node_ids: [0, 2],
