--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons.c4dd3f39.js">
 		<link rel="modulepreload" href="./_app/immutable/entry/app.83194b2f.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/0.c388e97b.js">
-		<link rel="modulepreload" href="./_app/immutable/chunks/2.12ceda65.js">
+		<link rel="modulepreload" href="./_app/immutable/chunks/3.6f7642b0.js">
 	</head>
 	<body data-sveltekit-preload-data="hover">
 		<div style="display: contents">
@@ -22,13 +22,7 @@
 <div class="navbar sticky top-0 bg-base-300"><div class="flex-none"><a class="btn btn-square btn-ghost" href="/"><span class="material-icons" style="font-size:2.5em">home </span></a></div>
 	<div class="flex-1">
 		<a class="btn btn-ghost normal-case text-xl" href="/">machiya-crafts</a></div></div>
-<div class="w-full p-4"><h1 class="text-3xl font-bold">Welcome</h1>
-<p>hello world!</p>
-<p>Visit <a href="/about" class="link link-primary">about</a></p>
-<p>Visit <a href="/tools/code" class="link link-primary">code</a></p>
-<p>Visit <a href="/tools/when" class="link link-primary">when</a></p>
-<button class="btn">Button</button>
-<button class="btn btn-primary">Button</button>
+<div class="w-full p-4"><p>about page</p>
 </div>
 
 
@@ -49,7 +43,7 @@
 						import("./_app/immutable/entry/app.83194b2f.js")
 					]).then(([kit, app]) => {
 						kit.start(app, element, {
-							node_ids: [0, 2],
+							node_ids: [0, 3],
 							data,
 							form: null,
 							error: null
